# KaleidoscopeLanguage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zn.md  test.txt
.github/workflows/: cmake-multi-platform.yml
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kalecc.cbp
build_release/.cmake/api/v1/reply/: cache-v2-3f60b0892d864fda108c.json  cmakeFiles-v1-6774699a18aa97567f40.json  codemodel-v2-7c7451c8d1a69ee1a190.json  directory-kale_std-Release-3228d07a50efccd92d6d.json  directory-test.parser_test-Release-d96de1c4086de9c46b4b.json  directory-test.run_test-Release-a0472995b449b47d3568.json  directory-test.token_test-Release-81c32982013566c92dfc.json  index-2023-09-07T13-42-54-0216.json  target-acc_gen-Release-d4efddb0fa61df83f352.json  target-intrinsics_gen-Release-875570e19ebaa3dba40d.json  target-kale_std-Release-b84eb7fe080d2e7598fa.json  target-kale_std_test-Release-264b53b5be9e7e74b6a0.json  target-kalecc-Release-92301ee13d6f474c29f5.json  target-omp_gen-Release-555235ba2559f379748b.json
build_release/Testing/Temporary/: CTestCostData.txt
build_release/kale_std/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kale_std.cbp
build_release/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/test/parser_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/test/run_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hello_world  kale_mod0.ll  test_add  test_fibonacci  test_for1  test_type
build_release/test/token_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: AboutTest.md  AboutTest.zn.md  计划支持的属性.md
include/: asm_builder.h  ast.h  ast_dumper.h  ast_visitor.h  cast.h  common.h  cpp_builder.h  error.h  global_variable.h  ir_builder.h  ir_gen.h  ir_support.h  kale_util.h  parser.h  pre_analysis.h  token.h  type_checker.h
include/test/: test.h
kale_std/: CMakeLists.txt  kaleidoscope_std.c  kaleidoscope_std.h  test.c
src/: CMakeLists.txt  asm_builder.cpp  ast.cpp  ast_dumper.cpp  ast_visitor.cpp  cpp_builder.cpp  global_variable.cpp  ir_builder.cpp  ir_gen.cpp  ir_support.cpp  kale_util.cpp  main.cpp  parser.cpp  pre_analysis.cpp  type_checker.cpp
src/test/: token_parser_test.cpp
test/: CMakeLists.txt  test_fibonacci.k  test_for_double.k  test_for_int.k  test_if.k  test_while_double.k  test_while_int.k
test/origin_test_case/: hello_world.k  test_add.k  test_fibonacci.k  test_for1.k  test_for_double.k  test_for_int.k  test_if.k  test_type.k  test_while_double.k  test_while_int.k
test/parser_test/: CMakeLists.txt
test/run_test/: CMakeLists.txt  hello_world  test_add  test_fibonacci  test_for1  test_for_double  test_for_int  test_type  test_while_double  test_while_int
test/token_test/: CMakeLists.txt  tokens.k
